--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
     "faker": "^5.1.0",
+    "method-override": "^3.0.0",
     "mysql2": "^2.2.5",
     "sequelize": "^5.10.1",
     "sequelize-cli": "^6.2.0"
