--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "faker": "^5.1.0",
     "method-override": "^3.0.0",
     "mysql2": "^2.2.5",
+    "popups": "^1.1.3",
     "sequelize": "^5.10.1",
     "sequelize-cli": "^6.2.0"
   }
