--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
     "faker": "^5.1.0",
+    "imgur-node-api": "^0.1.0",
     "method-override": "^3.0.0",
+    "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "popups": "^1.1.3",
     "sequelize": "^5.10.1",
