--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.17.1",
     "faker": "^5.1.0",
     "imgur-node-api": "^0.1.0",
+    "jQuery": "^1.7.4",
     "method-override": "^3.0.0",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
