--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "passport-local": "^1.0.0",
     "popups": "^1.1.3",
     "sequelize": "^5.10.1",
-    "sequelize-cli": "^6.2.0"
+    "sequelize-cli": "^6.2.0",
+    "sharp": "^0.27.0"
   }
 }
