--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test --exit --recursive --timeout 5000"
   },
   "author": "",
   "license": "ISC",
@@ -34,5 +34,11 @@
     "sequelize": "^5.10.1",
     "sequelize-cli": "^6.2.0",
     "sharp": "^0.27.0"
+  },
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "mocha": "^9.0.3",
+    "sinon": "^11.1.2",
+    "supertest": "^6.1.6"
   }
 }
