--- a/package.json
+++ b/package.json
@@ -38,7 +38,10 @@
   "devDependencies": {
     "chai": "^4.3.4",
     "mocha": "^9.0.3",
+    "proxyquire": "^2.1.3",
+    "sequelize-test-helpers": "^1.4.1",
     "sinon": "^11.1.2",
+    "sinon-chai": "^3.7.0",
     "supertest": "^6.1.6"
   }
 }
