--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.0",
+    "bcrypt": "5.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
@@ -33,14 +33,14 @@
     "popups": "^1.1.3",
     "sequelize": "^5.10.1",
     "sequelize-cli": "^6.2.0",
-    "sharp": "^0.27.0"
+    "sharp": "0.28.0"
   },
   "devDependencies": {
     "chai": "^4.3.4",
     "mocha": "^9.0.3",
     "proxyquire": "^2.1.3",
     "sequelize-test-helpers": "^1.4.1",
-    "sinon": "^11.1.2",
+    "sinon": "^10.0.0",
     "sinon-chai": "^3.7.0",
     "supertest": "^6.1.6"
   }
