--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,14 @@ sudo: required
 services:
   - docker
 
-before_install:
-  - docker build -t ruru0403/shopping-cart -f Dockerfile.dev .
+env:
+  DOCKER_COMPOSE_VERSION: 1.23.2
 
-script:
-  - docker run -e CI=true ruru0403/shopping-cart npm run test
+before_install:
+  - sudo rm /usr/local/bin/docker-compose
+  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+  - chmod +x docker-compose
+  - sudo mv docker-compose /usr/local/bin
+
+before_script:
+  - docker-compose up -d --build
