--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -4,6 +4,7 @@ RUN apk add --no-cache bash
 WORKDIR /app
 COPY package.json .
 RUN npm install && npm install --g nodemon
+COPY . .
 COPY ./entrypoint.sh /usr/entrypoint.sh
 COPY ./wait-for-it.sh /usr/wait-for-it.sh
 RUN ["chmod", "+x", "/usr/wait-for-it.sh"]
