--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ before_install:
   - sudo mv docker-compose /usr/local/bin
 
 before_script:
-  - docker-compose up -f docker-compose-dev.yml -d --build
+  - docker-compose -f docker-compose-dev.yml up --build
