--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,9 @@
 sudo: required
-language: node_js
 services:
   - docker
-
-env:
-  DOCKER_COMPOSE_VERSION: 3.8
 
 before_install:
   - curl https://docs.anchore.com/current/docs/engine/quickstart/docker-compose.yaml > docker-compose-dev.yml
 
 before_script:
-  - docker-compose -f docker-compose-dev.yml up -d --build
+  - docker-compose -f docker-compose-dev.yml up --build --exit-code-from testweb
