Update travis to test for the cannot find model bug

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - curl https://docs.anchore.com/current/docs/engine/quickstart/docker-compose.yaml > docker-compose-dev.yaml
+  - curl https://docs.anchore.com/current/docs/engine/quickstart/docker-compose.yaml > docker-compose.yaml
 
 before_script:
   - docker-compose -f docker-compose-dev.yml up --build --exit-code-from testweb
