--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ services:
   - docker
 
 before_install:
-  - npm i docker-compose
+  - npm init -y
+  - npm install docker-compose
 
 before_script:
   - docker-compose -f docker-compose-dev.yml up --build --exit-code-from testweb
