--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,7 @@ services:
   - docker
 
 before_install:
-  - npm init -y
-  - npm install docker-compose
+  - rm -f package-lock.json && npm install
 
 before_script:
   - docker-compose -f docker-compose-dev.yml up --build --exit-code-from testweb
