--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,12 @@
 sudo: required
 language: node_js
-version:
-  - "node:14.14.0"
+node_js:
+  - "14.14.0"
 services:
   - docker
 
-env:
-  DOCKER_COMPOSE_VERSION: 1.23.2
-  
 before_install:
-  - sudo rm /usr/local/bin/docker-compose
-  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
-  - chmod +x docker-compose
-  - sudo mv docker-compose /usr/local/bin
+  - rm -f package-lock.json && npm install docker-compose
 
 before_script:
   - docker-compose -f docker-compose-dev.yml up --build --exit-code-from testweb
