--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:14.14.0-alpine
 WORKDIR /app
 COPY package.json .
-RUN npm install
+RUN npm install && npm install -g pm2
 COPY . .
-CMD ["npm", "start"]
+CMD ["pm2", "start", "app.js"]
