Update README to using docker

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,14 @@
-URL =
-MerchantID =
-HashKey =
-HashIV =
-Email =
-Password =
+URL=
+MerchantID=
+HashKey=
+HashIV=
+Email=
+Password=
+PORT= 
+NODE_ENV=
+IMGUR_CLIENT_ID=
+MYSQL_USER=
+MYSQL_PASSWORD=
+MYSQL_DATABASE=
+MYSQL_HOST=
+MYSQL_PORT=
